--- a/templates/index.html
+++ b/templates/index.html
@@ -3,20 +3,30 @@
  <head>
     <meta charset="utf-8">
     <title>Favorite Location Manager</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/css/bootstrap.min.css">
  </head>
    
  <body>
-    <!-- <p>Hello Bootstrap!</p> -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.4/underscore-min.js"></script>
     <script src="http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/bootbox.min.js"></script>
-    <script src="js/script.js"></script>
-    <script src="js/asyncCalls.js"></script>
-
-    <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <script src="static/js/bootstrap.min.js"></script>
+    <script src="static/js/bootbox.min.js"></script>
+    <script src="static/js/script.js"></script>
+    <script src="static/js/asyncCalls.js"></script>
+    <!--
+    <script type="text/template" id="locationViewTemplate">
+        <div class="location">
+            <tr>
+                <td><%= location.name%></td>
+                <td><%= location.address%></td>
+                <td>button here</td>
+                <td><button onclick='removeLocation()' class='btn'>X</button></td>
+            </tr>
+        </div>
+    </script>
+    -->
+    <!-- <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   		<div class="modal-header">
     		<button type="button" class="close" data-dismiss="modal" aria-hidden="true" onclick="closeModal()">&times;</button>
     		<h3>Select Appropriate Address</h3>
@@ -29,7 +39,7 @@
     		<a class="btn" onclick="closeModal()">Cancel</a>
     		<a class="btn btn-primary" onclick="submitModal()">Submit</a>
   		</div>
-	</div>
+	</div> -->
 
     <div class="container">
         <div class="row row-padded">
@@ -44,12 +54,7 @@
         	<!-- <p>Hello guys i am a ".hero-unit" and you can use me if you wanna say something important.</p>
         	<p><a class="btn btn-primary btn-large">Super important &raquo;</a></p> -->
         </div>
-        <!-- <div class="row">
-        	<div class="alert alert-success">
-  				<p> HLLO</p>
-			</div>
-        </div> -->
-
+        
     	<div class="row row-padded">
     		<div class="span6">
     			<h4>Add Location Panel</h4><br>
@@ -65,7 +70,7 @@
 		<div class="row row-padded">
     		<div class="span6">
     			<h4>Map Viewer Panel</h4>
-    			<img src="img/placeholder.jpg"/>
+    			<img src="static/img/placeholder.jpg"/>
     		</div> <!-- .span12 -->
     	
     		<div class="span6">
