--- a/templates/test.html
+++ b/templates/test.html
@@ -7,18 +7,13 @@
  </head>
 
  <body>
-    <!-- // <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script> -->
-    <!-- // <script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.4/underscore-min.js"></script> -->
-    <!-- // <script src="http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js"></script> -->
-    <!-- // <script src="http://underscorejs.org/underscore-min.js"></script> -->
-    <!-- // <script src="http://backbonejs.org/backbone-min.js"></script> -->
     <script src="static/js/jquery-1.10.1.min.js"></script>
     <script src="static/js/underscore-min.js"></script>
     <script src="static/js/backbone-min.js"></script>
     <script src="static/js/bootstrap.min.js"></script>
     <script src="static/js/bootbox.min.js"></script>
     <script src="static/js/asyncCalls.js"></script>
-    
+
     <script type="text/template" id="locationViewTemplate">
                 <td><%=name%></td>
                 <td><%=address%></td>
@@ -27,11 +22,18 @@
     </script>
 
     <script src="static/js/testScript.js"></script>
+    <script
+src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCYKbZ0poE1uhdZbim9pdYYeReUAaKi3es&sensor=false">
+</script>
+	<script src="static/js/mapRendering.js"></script>
 
     <div class="container">
     	<div class="row row-padded">
             <div class="span12" id="alertbox_wrap">
             </div>
+        </div>
+        <div class="hero-unit">
+        	<h1>Favorite Location Manager</h1>
         </div>
     	<div class="row">
     		<div class="span6" id="add_location_panel">
@@ -44,6 +46,11 @@
     		</div>
     	</div>
     	<div class="row row-padded">
+    		<div class="span6">
+    			<h4>Map Viewer Panel</h4>
+    			<div id="map_canvas" style="width:450px;height:380px;"></div>
+    			<!-- <img src="static/img/placeholder.jpg"/> -->
+    		</div>
     		<div class="span6" id="location_list_panel">
     			<h4>Location List Panel</h4>
     			<table class="table table-striped table-bordered">
