double click box to edit

--- a/templates/test.html
+++ b/templates/test.html
@@ -17,8 +17,8 @@
     <script src="static/js/asyncCalls.js"></script>
 
     <script type="text/template" id="locationViewTemplate">
-		<td><%=name%></td>
-		<td><%=address%></td>
+		<td class="updateName"><%=name%></td>
+		<td class="updateAddress"><%=address%></td>
 		<td>button here</td>
 		<td><button class='btn delete_location'>X</button></td>
     </script>
