--- a/templates/test.html
+++ b/templates/test.html
@@ -22,11 +22,11 @@
 		<td>button here</td>
 		<td><button class='btn delete_location'>X</button></td>
     </script>
-<!-- 
+
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCYKbZ0poE1uhdZbim9pdYYeReUAaKi3es&sensor=false">
     </script>
     <script src="static/js/mapRendering.js"></script>
-     -->
+    
     <script src="static/js/testScript.js"></script>
 
     <div class="container">
@@ -50,11 +50,12 @@
     	<div class="row row-padded">
     		<div class="span6">
     			<h4>Map Viewer Panel</h4>
-    			<!-- <div id="map_canvas" style="width:450px;height:380px;"></div> -->
-    			<img src="static/img/placeholder.jpg"/>
+    			<div id="map_canvas" style="width:450px;height:380px;"></div>
+    			<!-- <img src="static/img/placeholder.jpg"/> -->
     		</div>
     		<div class="span6" id="location_list_panel">
     			<h4>Location List Panel</h4>
+                <p>To edit, double click on the field you would like to change</p>
     			<table class="table table-striped table-bordered">
     				<thead>
     					<tr>
@@ -85,12 +86,6 @@
     		source: ['405 Howard St sf CA']
     	});
 
-  //   	$('.editName').editable({
-		// 	type: 'text'
-		// });
-		// $('.editAddress').editable({
-		// 	type: 'text'
-		// });
     </script>
 
 
